--- a/views/signup.mustache
+++ b/views/signup.mustache
@@ -17,6 +17,7 @@
                 <a href="/login">Login</a>
             </nav>
         </header>
+        <main>
         <h1>Sign Up Below!</h1>
         <form action="/signup" method="post" class="signup-form">
 
@@ -29,8 +30,8 @@
             <label for="password">Password <input type="password" name="password" placeholder="Password"></label>
             <br>
             <button type="submit">Submit</button>
-
         </form>
+        </main>
     </div>
 </body>
 
