--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,38 +1,46 @@
 * {
     list-style: none;
+    font-family: 'Work Sans', sans-serif;
 }
 
 body {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    font-size: 1.5em;
+}
+
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: skyblue;
+    background-color: #C4C2C2;
     margin: 0;
     position: fixed;
     top: 0;
     width: 98%;
     padding: 0 1em;
-    height: 10%;
+    height: 4em;
 }
 
 .form {
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: 40%;
     margin: 0 auto;
-    background-color: tomato;
     border: 2px solid black;
+    border-radius: 8px;
 }
 
 .row {
     margin: 1em;
     display: flex;
     align-items: center;
-    /* justify-content: center; */
+    border-radius: 5px;
 }
 
 .header-row {
@@ -40,9 +48,13 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 2em;
-    border: 1px solid black;
+    border-bottom: 1px solid black;
     margin: 0 0 1em 0;
     padding: 1em;
+    background-color: #E5E5E5;
+    background-size: cover;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .title {
@@ -57,16 +69,63 @@ header {
 .comment {
     display: flex;
     flex-direction: column;
-    margin: 0 1em;
+    margin: 0;
     align-self: flex-start;
 }
 
 textarea {
-    width: 90%;
+    width: 100%;
+    height: 15em;
     resize: none;
+    margin: 0 auto;
+    border-radius: 5px;
+}
+
+input {
+    border-radius: 5px;
+    border: none;
+    border: solid 1px black;
+    font-size: 1em;
+    padding: .5em .3em;
+}
+
+select {
+    font-size: 1em;
+    /* padding: 2em .3em; */
+    height: 2.3em;
+}
+
+.row textarea {
     margin: 0 auto;
 }
 
 main {
     margin-top: 7%;
+}
+
+.comment-text {
+    width: 60%;
+    height: 8em;
+}
+
+.create {
+    align-self: flex-end;
+}
+
+.create button {
+    margin-left: 1em;
+}
+
+form * {
+    outline: none;
+}
+
+button {
+    padding: 1em;
+    border-radius: 5px;
+}
+
+.tags {
+    width: 100%;
+    margin-left: 1em;
 }
