--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,17 +27,37 @@ header {
     height: 4em;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: 0 auto;
+    justify-content: space-around;
+}
+
 .form {
     display: flex;
     flex-direction: column;
     width: 40%;
-    margin: 0 auto;
+    margin: 5em auto;
     border: 2px solid black;
     border-radius: 8px;
+    background-color: #ffffff;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: row;
+    height: 2em;
+    width: 10em;
+}
+
+.login-form label {
+    margin: 1em;
 }
 
 .row {
-    margin: 1em;
+    margin: .5em;
     display: flex;
     align-items: center;
     border-radius: 5px;
@@ -69,8 +89,7 @@ header {
 .comment {
     display: flex;
     flex-direction: column;
-    margin: 0;
-    align-self: flex-start;
+    margin: 1em 0;
 }
 
 textarea {
@@ -100,7 +119,7 @@ select {
 }
 
 main {
-    margin-top: 7%;
+    margin-top: 6%;
 }
 
 .comment-text {
@@ -121,11 +140,96 @@ form * {
 }
 
 button {
-    padding: 1em;
+    padding: .5em;
     border-radius: 5px;
+    font-size: 1em;
 }
 
 .tags {
     width: 100%;
     margin-left: 1em;
+}
+
+.signup-form label {
+    margin-bottom: .5em;
+}
+
+.login-button {
+    width: 200px;
+    padding: 0 2em;
+}
+
+#createSnippetForm {
+    background-color: rgba(24, 43, 43, .55);
+    z-index: 100;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid-item {
+    border: 1px solid black;
+    width: 80%;
+    margin: 1em auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    height: 20em;
+    /* height: 100%; */
+}
+
+.code-body {
+    border: solid 1px #999999;
+    width: 90%;
+    padding: .3em 1.5em;
+    height: 10em;
+    margin: 0 auto;
+    border-radius: 10px;
+    /* height: 100%; */
+}
+
+.button {
+    outline: none;
+    cursor: pointer;
+}
+
+pre {
+    overflow: hidden;
+}
+
+.code-cover {
+    background: linear-gradient(to bottom, rgba(255, 255, 255, .00), #ffffff);
+    width: 90%;
+    height: 5em;
+    position: relative;
+    z-index: 20;
+    top: -57px;
+}
+
+.tag {
+    margin-top: -40px;
+}
+
+#newSnippetButton {
+    margin: 1em 2em 1em 2em;
+}
+
+#close-x {
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
+.view-snippet {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: .5em;
+    cursor: pointer;
 }
