--- a/views/login.mustache
+++ b/views/login.mustache
@@ -6,29 +6,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Login</title>
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
   <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
-    <header>
-            <nav>
-                <a href="/signup">Sign Up</a>
-                <a class="selected" href="/login">Login</a>
-            </nav>
-    </header>
+  <header>
+    <h2>Code Snippets</h2>
+    {{#errors}}
+    <h4>{{.}}</h4>
+    {{/errors}}
+    <form class="login-form" action="/login" method="POST">
+      <span class="row">
+        <label for="username">Username</label>
+        <input type="text" name="username" placeholder="Username" required>
+      </span>
+      <br>
+      <span class="row">
+        <label for="password">Password</label>
+        <input type="password" name="password" placeholder="Password" required>
+      </span>
+      <br>
+      <button class="login-button" type="Submit">Login</button>
+    </form>
+  </header>
   <main>
-  <h1>Login</h1>
-  {{#errors}}
-  <h4>{{.}}</h4>
-  {{/errors}}
-  <form action="/login" method="POST">
-    <label for="">Username</label>
-    <input type="text" name="username" placeholder="Username" required> <br>
-    <label for="">Password</label>
-    <input type="password" name="password" placeholder="Password" required> <br>
-    <button type="Submit">Log in</button>
-  </form>
-  <a class="signup-link" href="/signup">Don't have an account? Sign up here!</a>
+    <form action="/signup" method="post" class="signup-form">
+      <h2>Not a member? Sign Up Below!</h2>
+      <label for="name">Name</label><input type="text" name="name" placeholder="Name">
+      <br>
+      <label for="email">Email</label><input type="email" name="email" placeholder="Email">
+      <br>
+      <label for="username">Username</label><input type="text" name="username" placeholder="User Name">
+      <br>
+      <label for="password">Password</label><input type="password" name="password" placeholder="Password">
+      <br>
+      <button type="submit">Create Account</button>
+    </form>
   </main>
 </body>
 
