--- a/views/home.mustache
+++ b/views/home.mustache
@@ -11,23 +11,43 @@
 </head>
 
 <body>
-    <header>
-        <h2>Code Snippets</h2>
-        {{#user}}
-        <h2>Logged in as {{user.username}}</h2>
-        {{/user}}
-        <a href="/logout">Logout</a>
-    </header>
-    <main>
-        <button class="button" onclick="showSnippetForm()" id="newSnippetButton">New Snippet</button>
-        <section id="createSnippetForm" style="display: none">
-            <form class="form" action="/home/newsnippet" method=POST>
-                <span class="header-row">
+    <div class="container">
+        <header>
+            <a href="/home">Code Snippets</a> {{#user}}
+            <h2>Logged in as {{user.username}}</h2>
+            {{/user}}
+            <a href="/logout">Logout</a>
+        </header>
+        <div class="tophomebuttons">
+            <button class="button" onclick="showSnippetForm()" id="newSnippetButton">New Snippet</button>
+            <form action="/home/getsnippetsbytag" method="post">
+                <input type="text" name="tags" placeholder="Search for a tag" autocomplete="off">
+            </form>
+            <div class="dropdown">
+                <button class="dropbtn button">Languages</button>
+                <div class="dropdown-content">
+                    <a href="/home">All</a>
+                    <a href="/home/Javascript">Javascript</a>
+                    <a href="/home/Java">Java</a>
+                    <a href="/home/SQL">SQL</a>
+                    <a href="/home/Ruby">Ruby</a>
+                    <a href="/home/PHP">PHP</a>
+                    <a href="/home/Python">Python</a>
+                </div>
+            </div>
+            {{#errors}}
+            <h4>{{.}}</h4>
+            {{/errors}}
+        </div>
+        <main>
+            <section id="createSnippetForm" style="display: none">
+                <form class="form" action="/home/newsnippet" method=POST>
+                    <span class="header-row">
                     <h3>Create Snippet</h3>
                     <span id="close-x" class="fa fa-times" onclick="showSnippetForm()"></span>
-                </span>
-                <span class="row">
-                    <input class="title" type="text" name="title" placeholder="Title" required minlength="1">
+                    </span>
+                    <span class="row">
+                    <input class="title" type="text" name="title" placeholder="Title" required minlength="1" autocomplete="off">
                     <select class="title" name="language" id="language" required>
                             <option selected disabled value="">Select a language...</option>
                             <option value="Javascript">JavaScript</option>
@@ -38,37 +58,38 @@
                             <option value="Python">Python</option>
                     </select>
                 </span>
-                <span class="row">
+                    <span class="row">
                     <textarea class="row" name="body" placeholder="&nbsp;Enter code body here..." required minlength="1"></textarea>
                 </span>
-                <span class="row">
+                    <span class="row">
                     <label for="tags">Tags</label>
                     <input class="tags" type="text" name="tags" placeholder="Ex: #front-end #middleware" required minlength="1">
                 </span>
-                <span class="row">
-                    <label class="comment">Add Comment <span class="optional">(optional)</span></label>
-                <textarea class="comment-text" name="comment" placeholder="&nbsp;Add comments here..."></textarea>
-                </span>
-                <span class="row create">
+                    <span class="row">
+                    <label class="comment-form">Add Comment <span class="optional">(optional)</span></label>
+                    <textarea class="comment-text" name="comment" placeholder="&nbsp;Add comments here..."></textarea>
+                    </span>
+                    <span class="row create">
                     <button class="button" onclick="showSnippetForm()" type="submit">Cancel</button>
                     <button class="button" type="submit">Create Snippet</button>
                 </span>
-            </form>
-        </section>
-        <section class="grid">
-            {{#snippet}}
-            <div class="grid-item">
-                <h2>{{language}} snippet: {{title}}</h2>
-                <pre class="code-body">{{body}}</pre>
-                <span class="code-cover">
+                </form>
+            </section>
+            <section class="grid">
+                {{#snippet}}
+                <div class="grid-item" id="item_{{_id}}">
+                    <h2>{{language}} snippet: {{title}}</h2>
+                    <pre class="code-body">{{body}}</pre>
+                    <span class="code-cover" id="cover_{{_id}}">
                 </span>
-                <span class="tag">{{tags}}</span>
-                <span class="comment">{{comment}}</span>
-                <p class="view-snippet" href="/snippet/{{_id}}">View Full Snippet</p>
-            </div>
-            {{/snippet}}
-        </section>
-    </main>
+                    <span class="tag">{{tags}}</span>
+                    <span class="comment">{{comment}}</span>
+                    <p class="view-snippet" onclick="showFullSnippet()" data-id="{{_id}}">View Full Snippet</p>
+                </div>
+                {{/snippet}}
+            </section>
+        </main>
+    </div>
     <script type="text/javascript">
         function showSnippetForm() {
             event.preventDefault();
@@ -77,6 +98,24 @@
                 form.style.display = "none";
             } else {
                 form.style.display = "block";
+            }
+        }
+        function showFullSnippet() {
+            let viewSnippet = event.target;
+            let viewSnippetID = viewSnippet.getAttribute('data-id');
+            console.log(viewSnippetID);
+            let snippet = document.getElementById('item_' + viewSnippetID);
+            let cover = document.getElementById('cover_' + viewSnippetID);
+            console.log(snippet);
+
+            if (snippet.style.height !== '100%') {
+                snippet.style.height = '100%';
+                viewSnippet.textContent = "Hide Snippet";
+                cover.style.display = 'none';
+            } else {
+                snippet.style.height = '20em';
+                viewSnippet.textContent = "View Snippet";
+                cover.style.display = 'block';
             }
         }
     </script>
