added /js/main.js for front end js that was in html. installed jest and supertest

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -90,35 +90,7 @@
             </section>
         </main>
     </div>
-    <script type="text/javascript">
-        function showSnippetForm() {
-            event.preventDefault();
-            let form = document.getElementById("createSnippetForm");
-            if (form.style.display == 'block') {
-                form.style.display = "none";
-            } else {
-                form.style.display = "block";
-            }
-        }
-        function showFullSnippet() {
-            let viewSnippet = event.target;
-            let viewSnippetID = viewSnippet.getAttribute('data-id');
-            console.log(viewSnippetID);
-            let snippet = document.getElementById('item_' + viewSnippetID);
-            let cover = document.getElementById('cover_' + viewSnippetID);
-            console.log(snippet);
-
-            if (snippet.style.height !== '100%') {
-                snippet.style.height = '100%';
-                viewSnippet.textContent = "Hide Snippet";
-                cover.style.display = 'none';
-            } else {
-                snippet.style.height = '20em';
-                viewSnippet.textContent = "View Snippet";
-                cover.style.display = 'block';
-            }
-        }
-    </script>
+    <script src="/js/main.js"></script>
     <script src="https://use.fontawesome.com/27763c6ae2.js"></script>
 </body>
 
