--- a/views/home.mustache
+++ b/views/home.mustache
@@ -11,36 +11,7 @@
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <a href="/home">Code Snippets</a>{{#user}}
-            <h2>Logged in as {{user.username}}</h2>
-            {{/user}}
-            <a href="/logout">Logout</a>
-        </header>
-        <div class="tophomebuttons">
-            <button class="button" onclick="showSnippetForm()" id="newSnippetButton">New Snippet</button>
-            <form action="/home/getsnippetsbytag" method="post">
-                <input type="text" name="tags" placeholder="Search for a tag" autocomplete="off">
-            </form>
-            <div class="dropdown">
-                <button class="dropbtn button">Languages</button>
-                <div class="dropdown-content">
-                    <a href="/home">All</a>
-                    <a href="/home/Javascript">Javascript</a>
-                    <a href="/home/Java">Java</a>
-                    <a href="/home/SQL">SQL</a>
-                    <a href="/home/Ruby">Ruby</a>
-                    <a href="/home/PHP">PHP</a>
-                    <a href="/home/Python">Python</a>
-                </div>
-            </div>
-            {{#errors}}
-            <h4>{{.}}</h4>
-            {{/errors}}
-        </div>
-        <main>
-            <section id="createSnippetForm" style="display: none">
+<section id="createSnippetForm" style="display: none">
                 <form class="form" action="/home/newsnippet" method=POST>
                     <span class="header-row">
                     <h3>Create Snippet</h3>
@@ -75,6 +46,35 @@
                 </span>
                 </form>
             </section>
+    <div class="container" id="home-container">
+        <header>
+            <a href="/home">Code Snippets</a>{{#user}}
+            <h2>Logged in as {{user.username}}</h2>
+            {{/user}}
+            <a href="/logout">Logout</a>
+        </header>
+        <div class="tophomebuttons">
+            <button class="button" onclick="showSnippetForm()" id="newSnippetButton">New Snippet</button>
+            <form action="/home/getsnippetsbytag" method="post">
+                <input type="text" name="tags" placeholder="Search for a tag" autocomplete="off">
+            </form>
+            <div class="dropdown">
+                <button class="dropbtn button">Languages</button>
+                <div class="dropdown-content">
+                    <a href="/home">All</a>
+                    <a href="/home/Javascript">Javascript</a>
+                    <a href="/home/Java">Java</a>
+                    <a href="/home/SQL">SQL</a>
+                    <a href="/home/Ruby">Ruby</a>
+                    <a href="/home/PHP">PHP</a>
+                    <a href="/home/Python">Python</a>
+                </div>
+            </div>
+            {{#errors}}
+            <h4>{{.}}</h4>
+            {{/errors}}
+        </div>
+        <main>
             <section class="grid">
                 {{#snippet}}
                 <div class="grid-item" id="item_{{_id}}">
